# file-retrieval-engine

./: CMakeLists.txt  README.md  file_retrieval_engine
include/: DataBlock.hpp  DualQueue.hpp  IndexBlock.hpp  Indexer.hpp  Reader.hpp  Search.hpp
src/: Indexer.cpp  Reader.cpp  Search.cpp  main.cpp
